Compilation_Racket_Mips/piton/tests/errors/return_type.py
def a() -> int: return "ABC"